<resources>
    <string name="app_name">AICollabCanvas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_pic_desc">Profile picture</string>
    <string name="account_name">Name</string>
    <string name="account_role">Role</string>
    <string name="save_button_desc">Save changes</string>
    <string name="cancel_button_desc">Cancel changes</string>
    <string name="edit_pic_button_desc">Edit picture</string>
    <string name="add_title">Title</string>
    <string name="add_subtitle">Subtitle</string>
    <string name="add_text">Your post here</string>
    <string name="addPicPostButton">Add picture</string>
    <string name="submitPostButton">Submit</string>
    <string name="post_pic_desc">Post picture</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="head_title">Welcome to AICollabCanvas!</string>
    <string name="add_password">Enter Password</string>
    <string name="add_email">Enter Email</string>
    <string name="addEmail">Enter Email Address</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot">Forgot Password?</string>
    <string name="newhere">New Here? Sign Up Now!</string>
    <string name="register">Register to be a member!</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="emailadress">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="contributor">Contributor\n</string>
    <string name="checkcontributor">Contributor</string>
    <string name="checkcommunity">Community</string>
    <string name="con_register">Register</string>
    <string name="Restore">Restore Password</string>
    <string name="restore_password">Restore Password</string>
    <string name="add_and_restore">We will send you an email to reset your password</string>
    <string name="submit">Submit</string>
    <string name="enter_new">Enter New Password</string>
    <string name="new_pass_restore">"Please enter a new password for your account "</string>
    <string name="change_pass">Change Password</string>
</resources>