<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".AddPostFragment">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/cpiEditPostProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            android:layout_gravity="center"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:id="@+id/clPostFormLayout">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvProfilePicCard"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="24dp"
                app:cardCornerRadius="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/ivProfilePic"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:contentDescription="@string/profile_pic_desc"
                    android:scaleType="centerCrop" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvProfileName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cvProfilePicCard"
                app:layout_constraintTop_toTopOf="@id/cvProfilePicCard" />

            <TextView
                android:id="@+id/tvProfileRole"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tvProfileName"
                app:layout_constraintTop_toBottomOf="@+id/tvProfileName" />

            <EditText
                android:id="@+id/etAddTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:hint="@string/add_title"
                android:inputType="text"
                android:padding="12dp"
                android:background="@drawable/edit_text_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cvProfilePicCard" />

            <EditText
                android:id="@+id/etAddSubtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/add_subtitle"
                android:inputType="text"
                android:padding="12dp"
                android:background="@drawable/edit_text_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etAddTitle" />

            <ImageView
                android:id="@+id/ivPostPic"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="true"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etAddSubtitle"/>

            <Button
                android:id="@+id/btnAddPicture"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginEnd="70dp"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/black"
                android:textColorLink="#020202"
                android:textSize="16sp"
                android:text="@string/addPicPostButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivPostPic" />

            <EditText
                android:id="@+id/etAddText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/add_text"
                android:inputType="textMultiLine"
                android:minLines="3"
                android:padding="12dp"
                android:background="@drawable/edit_text_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnAddPicture"/>


            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/black"
                android:textColorLink="#020202"
                android:textSize="16sp"
                android:text="@string/submitPostButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnCancelPost"
                app:layout_constraintTop_toBottomOf="@+id/etAddText" />

            <Button
                android:id="@+id/btnCancelPost"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/black"
                android:textColorLink="#020202"
                android:textSize="16sp"
                android:text="@string/cancelPostButton"
                app:layout_constraintEnd_toStartOf="@+id/btnSubmit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etAddText" />


            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/cpiAddPostProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnCancelPost"  />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</ScrollView>